--- a/A1/frontend/src/App.css
+++ b/A1/frontend/src/App.css
@@ -23,8 +23,10 @@ body {
 }
 
 .formPosition {
-  margin-left: 35%;
-  margin-top: 5%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .login-form {
@@ -282,6 +284,15 @@ li a:hover:not(.active) {
   border-radius: 50%;
 }
 
-.movecard {
+.moveapps {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
   text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 50px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
